# Prefect_MINIO

./: .env.example  .gitignore  README.md  README.template.md  docker-compose.yml
.github/: CONTRIBUTING.md
.github/workflows/: ruff.yml  test.yml
docs/: pyproject.toml
docs/source/: app_api.rst  app_front.app.rst  app_front.rst  app_train.rst  app_train.services.def_model.rst  app_train.services.prep_data_iris.rst  app_train.services.rst  app_train.train.rst  conf.py  index.rst  modules.rst
monitoring/: docker-compose.monitoring.yaml  docker-compose.uptime.yml
monitoring/grafana/provisioning/dashboards/definitions/: API_health.json
src/api/: .dockerignore  main.py  pyproject.toml
src/app_api/: main.py  pyproject.toml
src/app_train/: pyproject.toml  train.py
src/front/: .dockerignore  app.py  pyproject.toml
src/train/: .env.exemple  docker_compose.prefect.yml  prefect.yaml  pyproject.toml  train.py
tests/: test_api_main.py  test_front_app.py
