[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3",
    "dotenv",
    "fastapi",
    "loguru>=0.7.3",
    "mlflow",
    "pandas",
    "prometheus-client>=0.24.1",
    "protobuf",
    "psutil>=7.2.2",
    "prometheus_client>=0.24.1",
    "setuptools",
    "uvicorn",
]
